--- a/src/locales/al/translation.json
+++ b/src/locales/al/translation.json
@@ -4,6 +4,27 @@
     "Tea": "Çaj",
     "Drinks": "Pije",
     "Cocktails": "Koktej",
-    "Back to Home": "Kthehu në fillim",
-    "Category not found": "Kategoria nuk u gjet"
+    "Espresso": "Espresso",
+    "Double Espresso": "Double Espresso",
+    "Small Macchiato": "Macchiato e vogël",
+    "Large Macchiato": "Macchiato e madhe",
+    "Capuccino": "Kapuçino",
+    "Americano": "Americano",
+    "Nescafe": "Nescafe",
+    "Latte": "Latte",
+    "Flat White": "Flat White",
+    "Turkish Coffee": "Kafe turke",
+    "Double Turkish Coffee": "Kafe turke e dyfishtë",
+    "Pina Colada": "Pina Kolada",
+    "Strawberry Pina Colada": "Pina Kolada me luleshtrydhe",
+    "Strawberry Moctail": "Moctail me luleshtrydhe",
+    "Passion Fruit Mocktail": "Moctail me frut pasioni",
+    "Green Apple Mocktail": "Moctail me mollë jeshile",
+    "Mojito": "Mohito",
+    "Strawberry Mojito": "Mohito me luleshtrydhe",
+    "Strawberry Frozen": "Frozen me luleshtrydhe",
+    "Watermelon Frozen": "Frozen me shalqi",
+    "Green Apple Frozen": "Frozen me mollë jeshile",
+    "Banana Frozen": "Frozen me banane",
+    "Melon Frozen": "Frozen me pjepër"
 }
