--- a/src/locales/mk/translation.json
+++ b/src/locales/mk/translation.json
@@ -5,5 +5,17 @@
     "Drinks": "Pije",
     "Cocktails": "Koktej",
     "Back to Home": "Kthehu në fillim",
-    "Category not found": "Kategoria nuk u gjet"
+    "Category not found": "Kategoria nuk u gjet",
+    "Pina Colada": "Пина Колада",
+    "Strawberry Pina Colada": "Пина Колада со јагода",
+    "Strawberry Moctail": "Моктејл со јагода",
+    "Passion Fruit Mocktail": "Моктејл со овошје на страст",
+    "Green Apple Mocktail": "Моктејл со зелено јаболко",
+    "Mojito": "Мохито",
+    "Strawberry Mojito": "Мохито со јагода",
+    "Strawberry Frozen": "Фрозен со јагода",
+    "Watermelon Frozen": "Фрозен со лубеница",
+    "Green Apple Frozen": "Фрозен со зелено јаболко",
+    "Banana Frozen": "Фрозен со банана",
+    "Melon Frozen": "Фрозен со диња"
 }
