--- a/src/locales/tr/translation.json
+++ b/src/locales/tr/translation.json
@@ -1,9 +1,31 @@
 {
-    "Hot Coffees": "Kafe të ngrohta",
-    "Cold Coffees": "Kafe të ftohta",
-    "Tea": "Çaj",
-    "Drinks": "Pije",
-    "Cocktails": "Koktej",
-    "Back to Home": "Kthehu në fillim",
-    "Category not found": "Kategoria nuk u gjet"
+    "Cold Coffees": "soğuk kahveler",
+    "Tea": "Çaylar",
+    "Drinks": "İçecekler",
+    "Cocktails": "Kokteyler",
+    "Category not found": "Kategori bulunamadı",
+    "Hot Coffees": "Sıcak Kahveler",
+    "Espresso": "Espresso",
+    "Double Espresso": "Çift Espresso",
+    "Small Macchiato": "Küçük Macchiato",
+    "Large Macchiato": "Büyük Macchiato",
+    "Capuccino": "Kapuçino",
+    "Americano": "Americano",
+    "Nescafe": "Nescafe",
+    "Latte": "Latte",
+    "Flat White": "Flat White",
+    "Turkish Coffee": "Türk Kahvesi",
+    "Double Turkish Coffee": "Çift Türk Kahvesi",
+    "Pina Colada": "Pina Kolada",
+    "Strawberry Pina Colada": "Çilekli Pina Kolada",
+    "Strawberry Moctail": "Çilekli Moctail",
+    "Passion Fruit Mocktail": "Tutku meyveli Moctail",
+    "Green Apple Mocktail": "Yeşil elmalı Moctail",
+    "Mojito": "Mojito",
+    "Strawberry Mojito": "Çilekli Mojito",
+    "Strawberry Frozen": "Çilekli Frozen",
+    "Watermelon Frozen": "Karpuzlu Frozen",
+    "Green Apple Frozen": "Yeşil elmalı Frozen",
+    "Banana Frozen": "Muzlu Frozen",
+    "Melon Frozen": "Kavunlu Frozen"
 }
