--- a/src/locales/al/translation.json
+++ b/src/locales/al/translation.json
@@ -1,7 +1,7 @@
 {
     "Hot Coffees": "Kafe të ngrohta",
     "Cold Coffees": "Kafe të ftohta",
-    "Tea": "Çaj",
+    "Tea": "Çajrat",
     "Drinks": "Pije",
     "Cocktails": "Koktej",
     "Espresso": "Espresso",
@@ -15,6 +15,14 @@
     "Flat White": "Flat White",
     "Turkish Coffee": "Kafe turke",
     "Double Turkish Coffee": "Kafe turke e dyfishtë",
+    "Iced Espresso": "Espreso e ftohtë",
+    "Iced Macchiato": "Makijato e ftohtë",
+    "Iced Cappuccino": "Kapuçino e ftohtë",
+    "Iced Nescafe": "Neskafe e ftohtë",
+    "Frappe's": "Frape",
+    "Iced Latte": "Latte e ftohtë",
+    "Turkish Tea": "Çaj turk",
+    "Filter Tea": "Çaj filtri",
     "Pina Colada": "Pina Kolada",
     "Strawberry Pina Colada": "Pina Kolada me luleshtrydhe",
     "Strawberry Moctail": "Moctail me luleshtrydhe",
@@ -26,5 +34,30 @@
     "Watermelon Frozen": "Frozen me shalqi",
     "Green Apple Frozen": "Frozen me mollë jeshile",
     "Banana Frozen": "Frozen me banane",
-    "Melon Frozen": "Frozen me pjepër"
+    "Melon Frozen": "Frozen me pjepër",
+    "Water": "Ujë",
+    "Sparkling Water": "Ujë me gaz",
+    "Juice": "Lëng",
+    "Chocolate": "Çokollatë",
+    "Banana": "Banane",
+    "Hazelnut": "Fistik",
+    "Iced coffee": "Kafe e ftohtë",
+    "Forest fruits": "Fruta pylli",
+    "Mint": "Mente",
+    "Blueberry": "Boronicë",
+    "Cranberry": "Boronicë e kuqe",
+    "Chamomile": "Kamomil",
+    "Green Tea": "Çaj jeshil",
+    "Apple tea": "Çaj molle",
+    "Orange": "Portokall",
+    "Kiwi": "Kivi",
+    "Lemon": "Limoni",
+    "Exotic": "Eksotik",
+    "Mandarin": "Mandarina",
+    "Mulberry": "Dafinë",
+    "Peach": "Breskva",
+    "Apple": "Mollë",
+    "Cherry": "Qershi",
+    "Strawberry": "Mjedër",
+    "Multivitamin": "Multivitaminë"
 }
