--- a/src/locales/mk/translation.json
+++ b/src/locales/mk/translation.json
@@ -1,10 +1,26 @@
 {
-    "Hot Coffees": "Kafe të ngrohta",
-    "Cold Coffees": "Kafe të ftohta",
-    "Tea": "Çaj",
-    "Drinks": "Pije",
-    "Cocktails": "Koktej",
-    "Back to Home": "Kthehu në fillim",
+    "Cold Coffees": "Студени Кафеа",
+    "Tea": "Чај",
+    "Hot Coffees": "Топли Кафеа",
+    "Espresso": "Еспресо",
+    "Double Espresso": "Двоен Еспресо",
+    "Small Macchiato": "Мал Макијато",
+    "Large Macchiato": "Голем Макијато",
+    "Capuccino": "Капучино",
+    "Americano": "Американо",
+    "Nescafe": "Нескафе",
+    "Latte": "Лате",
+    "Flat White": "Флет Вајт",
+    "Turkish Coffee": "Турско Кафе",
+    "Double Turkish Coffee": "Двоено Турско Кафе",
+    "Iced Espresso": "Ладен Еспресо",
+    "Iced Macchiato": "Ладен Макијато",
+    "Iced Cappuccino": "Ладен Капучино",
+    "Iced Nescafe": "Ладен Нескафе",
+    "Frappe's": "Фрапе",
+    "Iced Latte": "Ладен Лате",
+    "Turkish Tea": "Турски Чај",
+    "Filter Tea": "Филтер Чај",
     "Category not found": "Kategoria nuk u gjet",
     "Pina Colada": "Пина Колада",
     "Strawberry Pina Colada": "Пина Колада со јагода",
@@ -17,5 +33,30 @@
     "Watermelon Frozen": "Фрозен со лубеница",
     "Green Apple Frozen": "Фрозен со зелено јаболко",
     "Banana Frozen": "Фрозен со банана",
-    "Melon Frozen": "Фрозен со диња"
+    "Melon Frozen": "Фрозен со диња",
+    "Water": "Вода",
+    "Sparkling Water": "Газирана Вода",
+    "Juice": "Сок",
+    "Chocolate": "Чоколадо",
+    "Banana": "Банана",
+    "Strawberry": "Јагода",
+    "Hazelnut": "Лешник",
+    "Iced coffee": "Ладно Кафе",
+    "Forest fruits": "Планинско Овошје",
+    "Mint": "Нане",
+    "Blueberry": "Боровинка",
+    "Cranberry": "Брусница",
+    "Chamomile": "Камилица",
+    "Green Tea": "Зелен Чај",
+    "Apple tea": "Чај од Јаболко",
+    "Orange": "Портокал",
+    "Kiwi": "Киви",
+    "Lemon": "Лимон",
+    "Exotic": "Екзотично",
+    "Mandarin": "Мандарина",
+    "Mulberry": "Моровина",
+    "Peach": "Праска",
+    "Apple": "Јаболко",
+    "Cherry": "Вишна",
+    "Multivitamin": "Мултивитамин"
 }
