--- a/src/locales/tr/translation.json
+++ b/src/locales/tr/translation.json
@@ -1,12 +1,12 @@
 {
-    "Cold Coffees": "soğuk kahveler",
+    "Cold Coffees": "Soğuk kahveler",
     "Tea": "Çaylar",
     "Drinks": "İçecekler",
     "Cocktails": "Kokteyler",
     "Category not found": "Kategori bulunamadı",
     "Hot Coffees": "Sıcak Kahveler",
     "Espresso": "Espresso",
-    "Double Espresso": "Çift Espresso",
+    "Double Espresso": "Double Espresso",
     "Small Macchiato": "Küçük Macchiato",
     "Large Macchiato": "Büyük Macchiato",
     "Capuccino": "Kapuçino",
@@ -15,7 +15,15 @@
     "Latte": "Latte",
     "Flat White": "Flat White",
     "Turkish Coffee": "Türk Kahvesi",
-    "Double Turkish Coffee": "Çift Türk Kahvesi",
+    "Double Turkish Coffee": "Duble Türk Kahvesi",
+    "Iced Espresso": "Soğuk Espresso",
+    "Iced Macchiato": "Soğuk Macchiato",
+    "Iced Cappuccino": "Soğuk Kapuçino",
+    "Iced Nescafe": "Soğuk Nescafe",
+    "Frappe's": "Frappe",
+    "Iced Latte": "Soğuk Latte",
+    "Turkish Tea": "Türk Çayı",
+    "Filter Tea": "Demleme Çay",
     "Pina Colada": "Pina Kolada",
     "Strawberry Pina Colada": "Çilekli Pina Kolada",
     "Strawberry Moctail": "Çilekli Moctail",
@@ -27,5 +35,30 @@
     "Watermelon Frozen": "Karpuzlu Frozen",
     "Green Apple Frozen": "Yeşil elmalı Frozen",
     "Banana Frozen": "Muzlu Frozen",
-    "Melon Frozen": "Kavunlu Frozen"
+    "Melon Frozen": "Kavunlu Frozen",
+    "Water": "Su",
+    "Sparkling Water": "Maden Suyu",
+    "Juice": "Meyve Suyu",
+    "Chocolate": "Çikolata",
+    "Banana": "Muz",
+    "Strawberry": "Çilek",
+    "Hazelnut": "Fındık",
+    "Iced coffee": "Soğuk Kahve",
+    "Forest fruits": "Orman Meyveleri",
+    "Mint": "Nane",
+    "Blueberry": "Yaban Mersini",
+    "Cranberry": "Turna Yemişi",
+    "Chamomile": "Papatya",
+    "Green Tea": "Yeşil Çay",
+    "Apple tea": "Elma Çayı",
+    "Orange": "Portakal",
+    "Kiwi": "Kivi",
+    "Lemon": "Limon",
+    "Exotic": "Egzotik",
+    "Mandarin": "Mandalina",
+    "Mulberry": "Dut",
+    "Peach": "Şeftali",
+    "Apple": "Elma",
+    "Cherry": "Kiraz",
+    "Multivitamin": "Multivitamin"
 }
